print_parser.output
State 51 conflicts: 1 shift/reduce
State 59 conflicts: 1 reduce/reduce
State 103 conflicts: 5 shift/reduce
State 104 conflicts: 5 shift/reduce
State 105 conflicts: 5 shift/reduce
State 106 conflicts: 5 shift/reduce
State 107 conflicts: 5 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program function

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    4         | FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    5 function_call: TOKEN_IDENTIFIER LEFTPAREN parameters RIGHTPAREN

    6 new_parameters: %empty
    7               | new_parameter
    8               | new_parameters COMMA new_parameter

    9 new_parameter: type TOKEN_IDENTIFIER

   10 parameters: %empty
   11           | expressions
   12           | expressions COMMA expressions

   13 statements: %empty
   14           | statements statement

   15 statement: new_variable
   16          | new_array
   17          | function_call
   18          | print
   19          | RETURN expressions SEMICOLON
   20          | BREAK SEMICOLON
   21          | CONTINUE SEMICOLON
   22          | if_statement
   23          | while_statement
   24          | read_statement
   25          | write_statement
   26          | assignment

   27 new_variable: type TOKEN_IDENTIFIER SEMICOLON
   28             | type TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON

   29 variable: NUMBER
   30         | TOKEN_IDENTIFIER
   31         | array_get_pointer
   32         | function_call

   33 new_array: type LEFTBRACKET NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

   34 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET NUMBER RIGHTBRACKET

   35 type: INT

   36 print: PRINT LEFTPAREN variable RIGHTPAREN SEMICOLON

   37 assignment: TOKEN_IDENTIFIER ASSIGN expressions SEMICOLON
   38           | array_get_pointer ASSIGN expressions SEMICOLON

   39 expressions: %empty
   40            | expressions expression

   41 expression: variable
   42           | LEFTPAREN expression RIGHTPAREN
   43           | expression PLUS expression
   44           | expression SUBTRACT expression
   45           | expression MULTIPLY expression
   46           | expression DIVIDE expression
   47           | expression MODULUS expression

   48 boolean_expressions: expression GREATER expression
   49                    | expression LESS expression
   50                    | expression LESSEQUAL expression
   51                    | expression GREATEREQUAL expression
   52                    | expression EQUALITY expression
   53                    | expression NOTEQUAL expression

   54 if_statement: IF LEFTPAREN boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY else_statement
   55             | IF boolean_expressions LEFTCURLY statements RIGHTCURLY else_statement

   56 else_statement: ELSE LEFTCURLY statement RIGHTCURLY
   57               | %empty

   58 while_statement: WHILE boolean_expressions LEFTCURLY statements RIGHTCURLY
   59                | WHILE LEFTPAREN boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY

   60 read_statement: READ LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

   61 write_statement: WRITE LEFTPAREN expressions RIGHTPAREN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
FUNC (258) 3 4
RETURN (259) 19
INT (260) 35
PRINT (261) 36
BREAK (262) 20
LEFTPAREN (263) 3 4 5 36 42 54 59 60 61
RIGHTPAREN (264) 3 4 5 36 42 54 59 60 61
LEFTCURLY (265) 3 4 54 55 56 58 59
RIGHTCURLY (266) 3 4 54 55 56 58 59
COMMA (267) 8 12
SEMICOLON (268) 19 20 21 27 28 33 36 37 38 60 61
PLUS (269) 43
SUBTRACT (270) 44
MULTIPLY (271) 45
DIVIDE (272) 46
MODULUS (273) 47
ASSIGN (274) 28 37 38
NUMBER (275) 28 29 33 34
LEFTBRACKET (276) 33 34
RIGHTBRACKET (277) 33 34
IF (278) 54 55
ELSE (279) 56
READ (280) 60
WRITE (281) 61
LESS (282) 49
LESSEQUAL (283) 50
GREATER (284) 48
GREATEREQUAL (285) 51
EQUALITY (286) 52
NOTEQUAL (287) 53
TOKEN_IDENTIFIER (288) 3 4 5 9 27 28 30 33 34 37 60
WHILE (289) 58 59
CONTINUE (290) 21


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1 2, on right: 0 2
function (38)
    on left: 3 4, on right: 2
function_call (39)
    on left: 5, on right: 17 32
new_parameters (40)
    on left: 6 7 8, on right: 3 4 8
new_parameter (41)
    on left: 9, on right: 7 8
parameters (42)
    on left: 10 11 12, on right: 5
statements (43)
    on left: 13 14, on right: 3 4 14 54 55 58 59
statement (44)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26, on right: 14 56
new_variable (45)
    on left: 27 28, on right: 15
variable (46)
    on left: 29 30 31 32, on right: 36 41
new_array (47)
    on left: 33, on right: 16
array_get_pointer (48)
    on left: 34, on right: 31 38
type (49)
    on left: 35, on right: 4 9 27 28 33
print (50)
    on left: 36, on right: 18
assignment (51)
    on left: 37 38, on right: 26
expressions (52)
    on left: 39 40, on right: 11 12 19 37 38 40 61
expression (53)
    on left: 41 42 43 44 45 46 47, on right: 40 42 43 44 45 46 47 48
    49 50 51 52 53
boolean_expressions (54)
    on left: 48 49 50 51 52 53, on right: 54 55 58 59
if_statement (55)
    on left: 54 55, on right: 22
else_statement (56)
    on left: 56 57, on right: 54 55
while_statement (57)
    on left: 58 59, on right: 23
read_statement (58)
    on left: 60, on right: 24
write_statement (59)
    on left: 61, on right: 25


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    2 program: program . function

    $end  shift, and go to state 2
    FUNC  shift, and go to state 3

    function  go to state 4


State 2

    0 $accept: program $end .

    $default  accept


State 3

    3 function: FUNC . TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    4         | FUNC . type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT               shift, and go to state 5
    TOKEN_IDENTIFIER  shift, and go to state 6

    type  go to state 7


State 4

    2 program: program function .

    $default  reduce using rule 2 (program)


State 5

   35 type: INT .

    $default  reduce using rule 35 (type)


State 6

    3 function: FUNC TOKEN_IDENTIFIER . LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN  shift, and go to state 8


State 7

    4 function: FUNC type . TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    TOKEN_IDENTIFIER  shift, and go to state 9


State 8

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN . new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT  shift, and go to state 5

    $default  reduce using rule 6 (new_parameters)

    new_parameters  go to state 10
    new_parameter   go to state 11
    type            go to state 12


State 9

    4 function: FUNC type TOKEN_IDENTIFIER . LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN  shift, and go to state 13


State 10

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters . RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    8 new_parameters: new_parameters . COMMA new_parameter

    RIGHTPAREN  shift, and go to state 14
    COMMA       shift, and go to state 15


State 11

    7 new_parameters: new_parameter .

    $default  reduce using rule 7 (new_parameters)


State 12

    9 new_parameter: type . TOKEN_IDENTIFIER

    TOKEN_IDENTIFIER  shift, and go to state 16


State 13

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN . new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    INT  shift, and go to state 5

    $default  reduce using rule 6 (new_parameters)

    new_parameters  go to state 17
    new_parameter   go to state 11
    type            go to state 12


State 14

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 18


State 15

    8 new_parameters: new_parameters COMMA . new_parameter

    INT  shift, and go to state 5

    new_parameter  go to state 19
    type           go to state 12


State 16

    9 new_parameter: type TOKEN_IDENTIFIER .

    $default  reduce using rule 9 (new_parameter)


State 17

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters . RIGHTPAREN LEFTCURLY statements RIGHTCURLY
    8 new_parameters: new_parameters . COMMA new_parameter

    RIGHTPAREN  shift, and go to state 20
    COMMA       shift, and go to state 15


State 18

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 13 (statements)

    statements  go to state 21


State 19

    8 new_parameters: new_parameters COMMA new_parameter .

    $default  reduce using rule 8 (new_parameters)


State 20

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 22


State 21

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements . RIGHTCURLY
   14 statements: statements . statement

    RETURN            shift, and go to state 23
    INT               shift, and go to state 5
    PRINT             shift, and go to state 24
    BREAK             shift, and go to state 25
    RIGHTCURLY        shift, and go to state 26
    IF                shift, and go to state 27
    READ              shift, and go to state 28
    WRITE             shift, and go to state 29
    TOKEN_IDENTIFIER  shift, and go to state 30
    WHILE             shift, and go to state 31
    CONTINUE          shift, and go to state 32

    function_call      go to state 33
    statement          go to state 34
    new_variable       go to state 35
    new_array          go to state 36
    array_get_pointer  go to state 37
    type               go to state 38
    print              go to state 39
    assignment         go to state 40
    if_statement       go to state 41
    while_statement    go to state 42
    read_statement     go to state 43
    write_statement    go to state 44


State 22

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY . statements RIGHTCURLY

    $default  reduce using rule 13 (statements)

    statements  go to state 45


State 23

   19 statement: RETURN . expressions SEMICOLON

    $default  reduce using rule 39 (expressions)

    expressions  go to state 46


State 24

   36 print: PRINT . LEFTPAREN variable RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 47


State 25

   20 statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 26

    3 function: FUNC TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 3 (function)


State 27

   54 if_statement: IF . LEFTPAREN boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY else_statement
   55             | IF . boolean_expressions LEFTCURLY statements RIGHTCURLY else_statement

    LEFTPAREN         shift, and go to state 49
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call        go to state 52
    variable             go to state 53
    array_get_pointer    go to state 54
    expression           go to state 55
    boolean_expressions  go to state 56


State 28

   60 read_statement: READ . LEFTPAREN TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 57


State 29

   61 write_statement: WRITE . LEFTPAREN expressions RIGHTPAREN SEMICOLON

    LEFTPAREN  shift, and go to state 58


State 30

    5 function_call: TOKEN_IDENTIFIER . LEFTPAREN parameters RIGHTPAREN
   34 array_get_pointer: TOKEN_IDENTIFIER . LEFTBRACKET NUMBER RIGHTBRACKET
   37 assignment: TOKEN_IDENTIFIER . ASSIGN expressions SEMICOLON

    LEFTPAREN    shift, and go to state 59
    ASSIGN       shift, and go to state 60
    LEFTBRACKET  shift, and go to state 61


State 31

   58 while_statement: WHILE . boolean_expressions LEFTCURLY statements RIGHTCURLY
   59                | WHILE . LEFTPAREN boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN         shift, and go to state 62
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call        go to state 52
    variable             go to state 53
    array_get_pointer    go to state 54
    expression           go to state 55
    boolean_expressions  go to state 63


State 32

   21 statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 33

   17 statement: function_call .

    $default  reduce using rule 17 (statement)


State 34

   14 statements: statements statement .

    $default  reduce using rule 14 (statements)


State 35

   15 statement: new_variable .

    $default  reduce using rule 15 (statement)


State 36

   16 statement: new_array .

    $default  reduce using rule 16 (statement)


State 37

   38 assignment: array_get_pointer . ASSIGN expressions SEMICOLON

    ASSIGN  shift, and go to state 65


State 38

   27 new_variable: type . TOKEN_IDENTIFIER SEMICOLON
   28             | type . TOKEN_IDENTIFIER ASSIGN NUMBER SEMICOLON
   33 new_array: type . LEFTBRACKET NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

    LEFTBRACKET       shift, and go to state 66
    TOKEN_IDENTIFIER  shift, and go to state 67


State 39

   18 statement: print .

    $default  reduce using rule 18 (statement)


State 40

   26 statement: assignment .

    $default  reduce using rule 26 (statement)


State 41

   22 statement: if_statement .

    $default  reduce using rule 22 (statement)


State 42

   23 statement: while_statement .

    $default  reduce using rule 23 (statement)


State 43

   24 statement: read_statement .

    $default  reduce using rule 24 (statement)


State 44

   25 statement: write_statement .

    $default  reduce using rule 25 (statement)


State 45

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements . RIGHTCURLY
   14 statements: statements . statement

    RETURN            shift, and go to state 23
    INT               shift, and go to state 5
    PRINT             shift, and go to state 24
    BREAK             shift, and go to state 25
    RIGHTCURLY        shift, and go to state 68
    IF                shift, and go to state 27
    READ              shift, and go to state 28
    WRITE             shift, and go to state 29
    TOKEN_IDENTIFIER  shift, and go to state 30
    WHILE             shift, and go to state 31
    CONTINUE          shift, and go to state 32

    function_call      go to state 33
    statement          go to state 34
    new_variable       go to state 35
    new_array          go to state 36
    array_get_pointer  go to state 37
    type               go to state 38
    print              go to state 39
    assignment         go to state 40
    if_statement       go to state 41
    while_statement    go to state 42
    read_statement     go to state 43
    write_statement    go to state 44


State 46

   19 statement: RETURN expressions . SEMICOLON
   40 expressions: expressions . expression

    LEFTPAREN         shift, and go to state 69
    SEMICOLON         shift, and go to state 70
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 71


State 47

   36 print: PRINT LEFTPAREN . variable RIGHTPAREN SEMICOLON

    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 72
    array_get_pointer  go to state 54


State 48

   20 statement: BREAK SEMICOLON .

    $default  reduce using rule 20 (statement)


State 49

   42 expression: LEFTPAREN . expression RIGHTPAREN
   54 if_statement: IF LEFTPAREN . boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY else_statement

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call        go to state 52
    variable             go to state 53
    array_get_pointer    go to state 54
    expression           go to state 73
    boolean_expressions  go to state 74


State 50

   29 variable: NUMBER .

    $default  reduce using rule 29 (variable)


State 51

    5 function_call: TOKEN_IDENTIFIER . LEFTPAREN parameters RIGHTPAREN
   30 variable: TOKEN_IDENTIFIER .
   34 array_get_pointer: TOKEN_IDENTIFIER . LEFTBRACKET NUMBER RIGHTBRACKET

    LEFTPAREN    shift, and go to state 59
    LEFTBRACKET  shift, and go to state 61

    LEFTPAREN  [reduce using rule 30 (variable)]
    $default   reduce using rule 30 (variable)


State 52

   32 variable: function_call .

    $default  reduce using rule 32 (variable)


State 53

   41 expression: variable .

    $default  reduce using rule 41 (expression)


State 54

   31 variable: array_get_pointer .

    $default  reduce using rule 31 (variable)


State 55

   43 expression: expression . PLUS expression
   44           | expression . SUBTRACT expression
   45           | expression . MULTIPLY expression
   46           | expression . DIVIDE expression
   47           | expression . MODULUS expression
   48 boolean_expressions: expression . GREATER expression
   49                    | expression . LESS expression
   50                    | expression . LESSEQUAL expression
   51                    | expression . GREATEREQUAL expression
   52                    | expression . EQUALITY expression
   53                    | expression . NOTEQUAL expression

    PLUS          shift, and go to state 75
    SUBTRACT      shift, and go to state 76
    MULTIPLY      shift, and go to state 77
    DIVIDE        shift, and go to state 78
    MODULUS       shift, and go to state 79
    LESS          shift, and go to state 80
    LESSEQUAL     shift, and go to state 81
    GREATER       shift, and go to state 82
    GREATEREQUAL  shift, and go to state 83
    EQUALITY      shift, and go to state 84
    NOTEQUAL      shift, and go to state 85


State 56

   55 if_statement: IF boolean_expressions . LEFTCURLY statements RIGHTCURLY else_statement

    LEFTCURLY  shift, and go to state 86


State 57

   60 read_statement: READ LEFTPAREN . TOKEN_IDENTIFIER RIGHTPAREN SEMICOLON

    TOKEN_IDENTIFIER  shift, and go to state 87


State 58

   61 write_statement: WRITE LEFTPAREN . expressions RIGHTPAREN SEMICOLON

    $default  reduce using rule 39 (expressions)

    expressions  go to state 88


State 59

    5 function_call: TOKEN_IDENTIFIER LEFTPAREN . parameters RIGHTPAREN

    RIGHTPAREN  reduce using rule 10 (parameters)
    RIGHTPAREN  [reduce using rule 39 (expressions)]
    $default    reduce using rule 39 (expressions)

    parameters   go to state 89
    expressions  go to state 90


State 60

   37 assignment: TOKEN_IDENTIFIER ASSIGN . expressions SEMICOLON

    $default  reduce using rule 39 (expressions)

    expressions  go to state 91


State 61

   34 array_get_pointer: TOKEN_IDENTIFIER LEFTBRACKET . NUMBER RIGHTBRACKET

    NUMBER  shift, and go to state 92


State 62

   42 expression: LEFTPAREN . expression RIGHTPAREN
   59 while_statement: WHILE LEFTPAREN . boolean_expressions RIGHTPAREN LEFTCURLY statements RIGHTCURLY

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call        go to state 52
    variable             go to state 53
    array_get_pointer    go to state 54
    expression           go to state 73
    boolean_expressions  go to state 93


State 63

   58 while_statement: WHILE boolean_expressions . LEFTCURLY statements RIGHTCURLY

    LEFTCURLY  shift, and go to state 94


State 64

   21 statement: CONTINUE SEMICOLON .

    $default  reduce using rule 21 (statement)


State 65

   38 assignment: array_get_pointer ASSIGN . expressions SEMICOLON

    $default  reduce using rule 39 (expressions)

    expressions  go to state 95


State 66

   33 new_array: type LEFTBRACKET . NUMBER RIGHTBRACKET TOKEN_IDENTIFIER SEMICOLON

    NUMBER  shift, and go to state 96


State 67

   27 new_variable: type TOKEN_IDENTIFIER . SEMICOLON
   28             | type TOKEN_IDENTIFIER . ASSIGN NUMBER SEMICOLON

    SEMICOLON  shift, and go to state 97
    ASSIGN     shift, and go to state 98


State 68

    4 function: FUNC type TOKEN_IDENTIFIER LEFTPAREN new_parameters RIGHTPAREN LEFTCURLY statements RIGHTCURLY .

    $default  reduce using rule 4 (function)


State 69

   42 expression: LEFTPAREN . expression RIGHTPAREN

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 99


State 70

   19 statement: RETURN expressions SEMICOLON .

    $default  reduce using rule 19 (statement)


State 71

   40 expressions: expressions expression .
   43 expression: expression . PLUS expression
   44           | expression . SUBTRACT expression
   45           | expression . MULTIPLY expression
   46           | expression . DIVIDE expression
   47           | expression . MODULUS expression

    PLUS      shift, and go to state 75
    SUBTRACT  shift, and go to state 76
    MULTIPLY  shift, and go to state 77
    DIVIDE    shift, and go to state 78
    MODULUS   shift, and go to state 79

    $default  reduce using rule 40 (expressions)


State 72

   36 print: PRINT LEFTPAREN variable . RIGHTPAREN SEMICOLON

    RIGHTPAREN  shift, and go to state 100


State 73

   42 expression: LEFTPAREN expression . RIGHTPAREN
   43           | expression . PLUS expression
   44           | expression . SUBTRACT expression
   45           | expression . MULTIPLY expression
   46           | expression . DIVIDE expression
   47           | expression . MODULUS expression
   48 boolean_expressions: expression . GREATER expression
   49                    | expression . LESS expression
   50                    | expression . LESSEQUAL expression
   51                    | expression . GREATEREQUAL expression
   52                    | expression . EQUALITY expression
   53                    | expression . NOTEQUAL expression

    RIGHTPAREN    shift, and go to state 101
    PLUS          shift, and go to state 75
    SUBTRACT      shift, and go to state 76
    MULTIPLY      shift, and go to state 77
    DIVIDE        shift, and go to state 78
    MODULUS       shift, and go to state 79
    LESS          shift, and go to state 80
    LESSEQUAL     shift, and go to state 81
    GREATER       shift, and go to state 82
    GREATEREQUAL  shift, and go to state 83
    EQUALITY      shift, and go to state 84
    NOTEQUAL      shift, and go to state 85


State 74

   54 if_statement: IF LEFTPAREN boolean_expressions . RIGHTPAREN LEFTCURLY statements RIGHTCURLY else_statement

    RIGHTPAREN  shift, and go to state 102


State 75

   43 expression: expression PLUS . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 103


State 76

   44 expression: expression SUBTRACT . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 104


State 77

   45 expression: expression MULTIPLY . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 105


State 78

   46 expression: expression DIVIDE . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 106


State 79

   47 expression: expression MODULUS . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 107


State 80

   49 boolean_expressions: expression LESS . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51

    function_call      go to state 52
    variable           go to state 53
    array_get_pointer  go to state 54
    expression         go to state 108


State 81

   50 boolean_expressions: expression LESSEQUAL . expression

    LEFTPAREN         shift, and go to state 69
    NUMBER            shift, and go to state 50
    TOKEN_IDENTIFIER  shift, and go to state 51
